--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,10 +21,35 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: npm install and build webpack
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    
+    - run: |
+        npm install
+        npm build
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+  
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+    matrix:
+      os: [ubuntu-tatest, windows-2016]
+      node-version: [12.x, 14.x]
+      
+    steps:
+    - uses: actions/checkout@v2
+      name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version}}
+    - name: npm install, npm test
+      run: |
+        npm install
+        npm test
+      CI: true
+            
+
