--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -51,9 +51,8 @@ jobs:
     with:
           node-version: ${{ matrix.node-version}}
     name: npm install, npm test
-    run: |
-        npm install
-        npm test
+    run: npm install
+    run: npm test
    CI: true
             
 
