--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -50,10 +50,12 @@ jobs:
     uses: actions/setup-node@v1
     with:
           node-version: ${{ matrix.node-version}}
-    name: npm install, npm test
-    run: |
-    npm install
-    npm test
-   CI: true
+    name: npm install
+    run: npm install
+  name: npm test
+  run: npm test 
+          
+
+ CI: true
             
 
