--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -7,6 +7,6 @@ jobs:
       - name: learning to create steps
         uses: pullreminders/label-when-approved-action@master
         env: 
-          APPROVALS: 1
+          APPROVALS: "1"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ADD_LABEL: "Awesome_workflow"
