--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,13 +49,11 @@ jobs:
       name: Use Node.js ${{ matrix.node-version }}
     uses: actions/setup-node@v1
     with:
-          node-version: ${{ matrix.node-version}}
-    name: npm install
-    run: npm install
-  name: npm test
-  run: npm test 
-          
-
- CI: true
+          node-version: ${{ matrix.node-version }}
+    name: npm install, npm test
+    run: |
+    npm install
+    npm test 
+    CI: true
             
 
