--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -1,7 +1,7 @@
 name: Team awesome's approval workflow
 on: pull_request_review
 jobs:
-  LabelWhenApproved:
+  labelWhenApproved:
     runs-on: ubuntu-latest
     steps:
       - name: learning to create steps
