--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -1,12 +1,14 @@
-name: Team awesome's approval workflow
 on: pull_request_review
+name: Label approved pull requests
 jobs:
-  LabelWhenApproved:
+  labelWhenApproved:
+    name: Label when approved
     runs-on: ubuntu-latest
     steps:
-      - name: learning to create steps
-        uses: pullreminders/label-when-approved-action
-        env: 
-          APPROVALS: 1
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ADD_LABEL: "Awesome_workflow"
+    - name: Label when approved
+      uses: pullreminders/label-when-approved-action@master
+      env:
+        APPROVALS: "1"
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        ADD_LABEL: "approved"
+        REMOVE_LABEL: "awaiting%20review"
