--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,49 +11,35 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-2016]
-        node-version: [ 12.x, 14.x]
-
+    steps:
+      - uses: actions/checkout@v2
+      - name: npm install and build webpack
+        run: |
+          npm install
+          npm run build
+      - uses: actions/upload-artifact@master
+        with:
+          name: webpack artifacts
+          path: public/
+  
+  
+  test:
+    needs: build
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: npm install and build webpack
+    - uses: actions/download-artifact@master
+      with: 
+        name: webpack artifacts
+        path: public
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - uses: actions/upload-artifact@master
-      with:
-        name: webpack artifacts
-        path: public/
-        
-    - run: |
-        npm install
-        npm build
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-  
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-    matrix:
-      os: [ubuntu-tatest, windows-2016]
-      node-version: [12.x, 14.x]
-      
-    steps:
-    - uses: actions/checkout@v2
-      name: Use Node.js ${{ matrix.node-version }}
-    uses: actions/setup-node@v1
-    with:
-          node-version: ${{ matrix.node-version}}
-    name: npm install, npm test
-    run: |
+    - name: npm install, and test
+      run: |
         npm install
         npm test
-   CI: true
-            
-
+      env:
+        CI: true
